Include information about each feature.

--- a/heart-disease-prediction.ipynb
+++ b/heart-disease-prediction.ipynb
@@ -1,23 +1,41 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f6e49535",
+   "metadata": {
+    "papermill": {
+     "duration": 0.002993,
+     "end_time": "2025-01-21T04:03:24.873403",
+     "exception": false,
+     "start_time": "2025-01-21T04:03:24.870410",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "# Heart Disease Prediction and EDA"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b3e4873f",
+   "id": "74ff3b9c",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
+    "_kg_hide-input": false,
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2025-01-21T01:22:00.863828Z",
-     "iopub.status.busy": "2025-01-21T01:22:00.863416Z",
-     "iopub.status.idle": "2025-01-21T01:22:01.908349Z",
-     "shell.execute_reply": "2025-01-21T01:22:01.906606Z"
+     "iopub.execute_input": "2025-01-21T04:03:24.879806Z",
+     "iopub.status.busy": "2025-01-21T04:03:24.879416Z",
+     "iopub.status.idle": "2025-01-21T04:03:25.731322Z",
+     "shell.execute_reply": "2025-01-21T04:03:25.730184Z"
     },
     "papermill": {
-     "duration": 1.051387,
-     "end_time": "2025-01-21T01:22:01.910719",
+     "duration": 0.857057,
+     "end_time": "2025-01-21T04:03:25.733129",
      "exception": false,
-     "start_time": "2025-01-21T01:22:00.859332",
+     "start_time": "2025-01-21T04:03:24.876072",
      "status": "completed"
     },
     "tags": []
@@ -56,19 +74,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "82a8227d",
+   "id": "4a423ac4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-21T01:22:01.917156Z",
-     "iopub.status.busy": "2025-01-21T01:22:01.916583Z",
-     "iopub.status.idle": "2025-01-21T01:22:05.126337Z",
-     "shell.execute_reply": "2025-01-21T01:22:05.125010Z"
+     "iopub.execute_input": "2025-01-21T04:03:25.739200Z",
+     "iopub.status.busy": "2025-01-21T04:03:25.738772Z",
+     "iopub.status.idle": "2025-01-21T04:03:28.482596Z",
+     "shell.execute_reply": "2025-01-21T04:03:28.481421Z"
     },
     "papermill": {
-     "duration": 3.215128,
-     "end_time": "2025-01-21T01:22:05.128504",
+     "duration": 2.748533,
+     "end_time": "2025-01-21T04:03:28.484369",
      "exception": false,
-     "start_time": "2025-01-21T01:22:01.913376",
+     "start_time": "2025-01-21T04:03:25.735836",
      "status": "completed"
     },
     "tags": []
@@ -132,25 +150,25 @@
     "df = pd.read_csv(file_path)\n",
     "\n",
     "# Display the first few rows of the dataset\n",
-    "print(df.head())\n"
+    "print(df.head())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "220ece45",
+   "id": "7859c583",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-21T01:22:05.137123Z",
-     "iopub.status.busy": "2025-01-21T01:22:05.136735Z",
-     "iopub.status.idle": "2025-01-21T01:22:05.568658Z",
-     "shell.execute_reply": "2025-01-21T01:22:05.567441Z"
+     "iopub.execute_input": "2025-01-21T04:03:28.491881Z",
+     "iopub.status.busy": "2025-01-21T04:03:28.491611Z",
+     "iopub.status.idle": "2025-01-21T04:03:28.909254Z",
+     "shell.execute_reply": "2025-01-21T04:03:28.908209Z"
     },
     "papermill": {
-     "duration": 0.437995,
-     "end_time": "2025-01-21T01:22:05.570379",
+     "duration": 0.423834,
+     "end_time": "2025-01-21T04:03:28.910997",
      "exception": false,
-     "start_time": "2025-01-21T01:22:05.132384",
+     "start_time": "2025-01-21T04:03:28.487163",
      "status": "completed"
     },
     "tags": []
@@ -215,21 +233,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fa957959",
+   "metadata": {
+    "papermill": {
+     "duration": 0.002293,
+     "end_time": "2025-01-21T04:03:28.916167",
+     "exception": false,
+     "start_time": "2025-01-21T04:03:28.913874",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "### Display unique values for each column"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e88cf581",
+   "id": "f1e5c5e3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-21T01:22:05.576386Z",
-     "iopub.status.busy": "2025-01-21T01:22:05.576055Z",
-     "iopub.status.idle": "2025-01-21T01:22:06.065629Z",
-     "shell.execute_reply": "2025-01-21T01:22:06.064118Z"
+     "iopub.execute_input": "2025-01-21T04:03:28.921914Z",
+     "iopub.status.busy": "2025-01-21T04:03:28.921626Z",
+     "iopub.status.idle": "2025-01-21T04:03:29.373681Z",
+     "shell.execute_reply": "2025-01-21T04:03:29.372665Z"
     },
     "papermill": {
-     "duration": 0.494597,
-     "end_time": "2025-01-21T01:22:06.067511",
+     "duration": 0.456612,
+     "end_time": "2025-01-21T04:03:29.375160",
      "exception": false,
-     "start_time": "2025-01-21T01:22:05.572914",
+     "start_time": "2025-01-21T04:03:28.918548",
      "status": "completed"
     },
     "tags": []
@@ -258,12 +293,10 @@
       "Unique Values: ['Very good' 'Fair' 'Good' 'Excellent' 'Poor']\n",
       "\n",
       "Column: PhysicalHealthDays\n",
-      "Unique Values: [ 4.  0.  5.  3.  2. 25. 30. 15. 29.  8. 16. 20. 10.  9.  7.  1. 21.  6.\n",
-      " 27. 14. 12. 11. 13. 28. 17. 23. 24. 26. 18. 22. 19.]\n",
+      "Range: 0.0 to 30.0\n",
       "\n",
       "Column: MentalHealthDays\n",
-      "Unique Values: [ 0. 15.  4. 25.  5. 30. 27.  3.  2.  1. 10. 20. 21.  6.  7.  8. 14.  9.\n",
-      " 12. 18. 29. 28. 17. 11. 16. 13. 26. 22. 24. 19. 23.]\n",
+      "Range: 0.0 to 30.0\n",
       "\n",
       "Column: LastCheckupTime\n",
       "Unique Values: ['Within past year (anytime less than 12 months ago)'\n",
@@ -275,8 +308,7 @@
       "Unique Values: ['Yes' 'No']\n",
       "\n",
       "Column: SleepHours\n",
-      "Unique Values: [ 9.  6.  8.  5.  7. 10.  4. 12.  3. 18. 11.  2.  1. 16. 14. 15. 13. 20.\n",
-      " 24. 23. 19. 17. 22.]\n",
+      "Range: 1.0 to 24.0\n",
       "\n",
       "Column: RemovedTeeth\n",
       "Unique Values: ['None of them' '6 or more, but not all' '1 to 5' 'All']\n",
@@ -352,71 +384,13 @@
       " 'Age 18 to 24']\n",
       "\n",
       "Column: HeightInMeters\n",
-      "Unique Values: [1.6  1.78 1.85 1.7  1.55 1.63 1.75 1.68 1.83 1.52 1.88 1.5  1.73 1.65\n",
-      " 1.8  1.57 1.91 1.47 1.42 1.22 1.93 2.01 1.96 1.98 1.45 1.35 1.76 2.03\n",
-      " 2.16 1.51 1.53 1.69 1.56 1.84 1.9  1.54 1.72 1.87 1.74 1.4  1.64 1.58\n",
-      " 1.62 1.79 1.67 1.46 1.89 1.61 1.3  1.37 2.13 2.06 2.11 0.91 2.26 2.18\n",
-      " 1.77 2.36 1.59 1.86 1.82 1.66 1.71 1.95 1.05 2.08 1.49 1.38 1.81 1.44\n",
-      " 1.48 1.19 1.32 1.24 1.07 1.04 1.27 1.1  1.92 1.2  2.24 1.12 1.03 0.97\n",
-      " 1.25 2.29 1.16 1.18 1.09 2.41 1.   1.17 1.08 1.43 1.14 1.02 2.   2.02\n",
-      " 0.95 2.34 2.21]\n",
+      "Range: 0.91 to 2.41\n",
       "\n",
       "Column: WeightInKilograms\n",
-      "Unique Values: [ 71.67  95.25 108.86  90.72  79.38 120.2   88.    74.84  78.02  63.5\n",
-      " 122.47 115.67  81.65  86.18  76.2   54.88  72.57  88.45 104.33  52.16\n",
-      "  68.04  65.77  56.7   94.8  123.83  50.8   68.95 113.4   83.91  77.56\n",
-      "  68.49  82.1   80.74 106.14  58.06  61.69  57.61  84.82  70.76  70.31\n",
-      "  91.63 102.06  48.08  61.23 109.77  99.79  58.97 110.68  64.86 111.13\n",
-      "  45.36  79.83  98.88  55.34 101.6   77.11  93.89  71.21  49.9   96.16\n",
-      " 163.29 120.66  97.52  88.9   44.91  85.73  83.46  92.99 132.    67.59\n",
-      "  92.08  73.48 107.5  107.95  91.17  74.39  64.41  62.6   46.72 103.42\n",
-      "  87.09  89.81  83.01 100.7   56.25  96.62  66.68  67.13  69.4   58.51\n",
-      "  78.93  95.71  63.05  49.44 127.01 145.15 122.02 107.05 126.55 117.03\n",
-      "  47.17 181.44  65.32 117.93 136.08  78.47  52.62 121.56  73.94  82.55\n",
-      " 106.59  59.87 110.22  62.14  51.71  93.44  54.43  85.28  59.42  66.22\n",
-      "  76.66  55.79  75.3   97.07  87.54  69.85 124.74  63.96  47.63  94.35\n",
-      "  97.98  89.36  92.53 101.15 149.69 129.27  84.37 195.04  99.34 114.31\n",
-      "  53.07  81.19  75.75 124.28 112.94  80.29 114.76  45.81  53.52 133.81\n",
-      "  51.26 158.76  60.78  46.27  72.12 131.54 127.91  53.98  98.43 130.63\n",
-      " 143.34 102.51 115.21  90.26 166.92 109.32  40.37 135.62 204.12 129.73\n",
-      " 127.46 138.35 105.69 119.75  48.53 140.61 105.23 139.25 126.1  135.17\n",
-      " 102.97 122.92  57.15  38.56  60.33 131.09 148.78 116.57 112.49  86.64\n",
-      " 112.04 172.37 133.36 118.84  50.35 103.87 111.58 121.11 113.85  73.03\n",
-      " 142.88 134.26 123.38  37.19 119.29  36.29  48.99  43.09  41.73  35.38\n",
-      " 104.78 144.24 167.83 149.23  37.65  86.   147.42 165.56 154.22 136.98\n",
-      " 108.41 155.58 206.38 148.32  42.18  44.45  90.   191.87 249.48  67.\n",
-      "  44.    40.82 156.49  53.   139.71 130.18 118.39 100.   151.95 165.11\n",
-      "  43.54 134.72 141.52 125.19  75.   250.   116.12  73.   100.24  74.\n",
-      " 200.    80.    82.    54.    66.   152.41  39.46  41.28 190.51 188.24\n",
-      "  59.    70.   170.1   46.   265.   168.74 190.    55.    93.   159.66\n",
-      "  78.    38.1  185.07 104.   183.7  125.65  68.   134.   130.    32.21\n",
-      " 143.79 137.89 179.17 105.    65.    32.   292.57  85.    72.   174.63\n",
-      "  50.   128.37  62.    87.   176.9   39.92  76.   128.82  58.   156.04\n",
-      " 121.    42.64  89.   146.96 146.06 171.46 227.25  29.48 190.06 161.03\n",
-      " 226.8  132.45 137.44  64.    56.   141.07  52.    63.   120.    83.\n",
-      "  57.    31.75  77.    96.    60.   115.    41.   150.59 272.16  48.\n",
-      "  39.01  95.   197.31 158.3   45.    94.   240.4   49.   157.85 108.\n",
-      " 185.    61.    34.02 132.9   84.   229.97 138.8   81.    79.    92.\n",
-      " 107.   155.13 208.65  69.   111.   110.   151.05 210.   140.16  35.83\n",
-      " 146.51 117.48 102.   125.   151.5   36.74  38.   135.    71.   147.87\n",
-      " 153.77 170.    91.    98.   192.32 186.88 118.   160.12 160.   170.55\n",
-      " 201.85 184.16 175.09 142.43 169.   166.01 180.53 196.41 162.39  40.\n",
-      " 171.91 195.95 136.53 153.31 159.21 164.2  219.99 141.97 173.27  34.47\n",
-      " 213.19 276.24 199.58 215.46 217.72 175.99 200.03 230.88  33.57 185.52\n",
-      " 103.   152.86 101.   160.57 150.14 157.4  145.   150.   163.75 191.42\n",
-      " 174.18 164.65 256.28 205.48 192.78 161.48 178.26 179.62 144.7  205.02\n",
-      " 178.72 154.68 166.47 177.81 200.49 231.79 238.14 227.7  273.52 211.83\n",
-      " 223.62 197.77 189.15 185.97 250.38 183.25 181.89 222.26 231.33 180.08\n",
-      " 202.76 180.   164.   156.94 114.   122.   161.93 137.   162.84 188.69\n",
-      " 234.51 199.13 203.21 145.6  173.73 263.08 154.   239.04 177.35 224.98\n",
-      " 117.    37.    97.   210.92 273.06 203.66 238.59 113.   224.53 169.64\n",
-      " 146.   201.4  220.    34.93 254.01 212.73 176.45 184.61 124.   152.\n",
-      " 233.6  193.23 205.   244.94 229.06  47.   167.38  99.    28.12 235.87\n",
-      " 171.   212.28 180.98 169.19 175.54  30.84 116.   168.28 123.   186.43\n",
-      " 172.82 182.8  217.27 182.34 246.3   30.39]\n",
+      "Range: 28.12 to 292.57\n",
       "\n",
       "Column: BMI\n",
-      "Unique Values: [27.99 30.13 31.66 ... 38.8  58.95 45.28]\n",
+      "Range: 12.02 to 97.65\n",
       "\n",
       "Column: AlcoholDrinkers\n",
       "Unique Values: ['No' 'Yes']\n",
@@ -446,23 +420,87 @@
     }
    ],
    "source": [
-    "# Display unique values for each column\n",
+    "# Iterate through each column and process based on data type\n",
     "for column in df.columns:\n",
-    "    unique_values = df[column].unique()\n",
-    "    print(f\"Column: {column}\")\n",
-    "    print(f\"Unique Values: {unique_values}\\n\")"
+    "    if df[column].dtype == 'object':  # Categorical variables\n",
+    "        unique_values = df[column].unique()\n",
+    "        print(f\"Column: {column}\")\n",
+    "        print(f\"Unique Values: {unique_values}\\n\")\n",
+    "    else:  # Numeric variables\n",
+    "        col_min = df[column].min()\n",
+    "        col_max = df[column].max()\n",
+    "        print(f\"Column: {column}\")\n",
+    "        print(f\"Range: {col_min} to {col_max}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e88b6d07",
+   "metadata": {
+    "papermill": {
+     "duration": 0.002745,
+     "end_time": "2025-01-21T04:03:29.381146",
+     "exception": false,
+     "start_time": "2025-01-21T04:03:29.378401",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "Here’s a brief rundown of what each column in the dataset represents:\n",
+    "\n",
+    "`State` - State FIPS Code\\\n",
+    "`Sex` - Sex of Respondent\\\n",
+    "`GeneralHealth` - Would you say that in general your health is:\\\n",
+    "`PhysicalHealthDays` - Now thinking about your physical health, which includes physical illness and injury, for how many days during the past 30 days was your physical health not good?\\\n",
+    "`MentalHealthDays` - Now thinking about your mental health, which includes stress, depression, and problems with emotions, for how many days during the past 30 days was your mental health not good?\\\n",
+    "`LastCheckupTime` - About how long has it been since you last visited a doctor for a routine checkup?\\\n",
+    "`PhysicalActivities` - During the past month, other than your regular job, did you participate in any physical activities or exercises such as running, calisthenics, golf, gardening, or walking for exercise?\\\n",
+    "`SleepHours` - On average, how many hours of sleep do you get in a 24-hour period?\\\n",
+    "`RemovedTeeth` - Not including teeth lost for injury or orthodontics, how many of your permanent teeth have been removed because of tooth decay or gum disease?\\\n",
+    "`HadHeartAttack` - (Ever told) you had a heart attack, also called a myocardial infarction?\\\n",
+    "`HadAngina` - (Ever told) (you had) angina or coronary heart disease?\\\n",
+    "`HadStroke` - (Ever told) (you had) a stroke.\\\n",
+    "`HadAsthma` - (Ever told) (you had) asthma?\\\n",
+    "`HadSkinCancer` - (Ever told) (you had) skin cancer that is not melanoma?\\\n",
+    "`HadCOPD` - (Ever told) (you had) C.O.P.D. (chronic obstructive pulmonary disease), emphysema or chronic bronchitis?\\\n",
+    "`HadDepressiveDisorder` - (Ever told) (you had) a depressive disorder (including depression, major depression, dysthymia, or minor depression)?\\\n",
+    "`HadKidneyDisease` - Not including kidney stones, bladder infection or incontinence, were you ever told you had kidney disease?\\\n",
+    "`HadArthritis` - (Ever told) (you had) some form of arthritis, rheumatoid arthritis, gout, lupus, or fibromyalgia?  (Arthritis diagnoses include: rheumatism, polymyalgia rheumatica; osteoarthritis (not osteporosis); tendonitis, bursitis, bunion, tennis elbow; carpal tunnel syndrome, tarsal tunnel syndrome; joint infection, etc.)\\\n",
+    "`HadDiabetes` - (Ever told) (you had) diabetes?\\\n",
+    "`DeafOrHardOfHearing` - Are you deaf or do you have serious difficulty hearing?\\\n",
+    "`BlindOrVisionDifficulty` - Are you blind or do you have serious difficulty seeing, even when wearing glasses?\\\n",
+    "`DifficultyConcentrating` - Because of a physical, mental, or emotional condition, do you have serious difficulty concentrating, remembering, or making decisions?\\\n",
+    "`DifficultyWalking` - Do you have serious difficulty walking or climbing stairs?\\\n",
+    "`DifficultyDressingBathing` - Do you have difficulty dressing or bathing?\\\n",
+    "`DifficultyErrands` - Because of a physical, mental, or emotional condition, do you have difficulty doing errands alone such as visiting a doctor´s office or shopping?\\\n",
+    "`SmokerStatus` - Four-level smoker status:  Everyday smoker, Someday smoker, Former smoker, Non-smoker\\\n",
+    "`ECigaretteUsage` - Would you say you have never used e-cigarettes or other electronic vaping products in your entire life or now use them every day, use them some days, or used them in the past but do not currently use them at all?\\\n",
+    "`ChestScan` - Have you ever had a CT or CAT scan of your chest area?\\\n",
+    "`RaceEthnicityCategory` - Five-level race/ethnicity category\\\n",
+    "`AgeCategory` - Fourteen-level age category\\\n",
+    "`HeightInMeters` - Reported height in meters\\\n",
+    "`WeightInKilograms` - Reported weight in kilograms\\\n",
+    "`BMI` - Body Mass Index (BMI)\\\n",
+    "`AlchoholDrinkers` - Adults who reported having had at least one drink of alcohol in the past 30 days.\\\n",
+    "`HIVTesting` - Adults who have ever been tested for HIV\\\n",
+    "`FluVaxLast12` - During the past 12 months, have you had either flu vaccine that was sprayed in your nose or flu shot injected into your arm?\\\n",
+    "`PneumoVaxEver` - Have you ever had a pneumonia shot also known as a pneumococcal vaccine?\\\n",
+    "`TetanusLast10Tdap` - Have you received a tetanus shot in the past 10 years? Was this Tdap, the tetanus shot that also has pertussis or whooping cough vaccine?\\\n",
+    "`HighRiskLastYear` - You have injected any drug other than those prescribed for you in the past year. You have been treated for a sexually transmitted disease or STD in the past year. You have given or received money or drugs in exchange for sex in the past year.\\\n",
+    "`CovidPos` - Has a doctor, nurse, or other health professional ever told you that you tested positive for COVID 19?\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d3d1202",
+   "id": "4774c267",
    "metadata": {
     "papermill": {
-     "duration": 0.003292,
-     "end_time": "2025-01-21T01:22:06.074088",
+     "duration": 0.002608,
+     "end_time": "2025-01-21T04:03:29.386768",
      "exception": false,
-     "start_time": "2025-01-21T01:22:06.070796",
+     "start_time": "2025-01-21T04:03:29.384160",
      "status": "completed"
     },
     "tags": []
@@ -506,14 +544,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 8.745803,
-   "end_time": "2025-01-21T01:22:06.698107",
+   "duration": 7.484163,
+   "end_time": "2025-01-21T04:03:29.907460",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-01-21T01:21:57.952304",
+   "start_time": "2025-01-21T04:03:22.423297",
    "version": "2.6.0"
   }
  },
